# ntex-app

./: .gitignore  Cargo.toml  videos.db
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_videos.rs  m20240115_000001_create_video_table.rs
src/: api.rs  app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/controllers/: mod.rs  video_controller.rs
src/entity/: mod.rs  video.rs
src/error/: mod.rs
src/repositories/: mod.rs  video_repository.rs
src/services/: video_service.rs
tests/: api_tests.rs
tests/common/: mod.rs
