[package]
name = "ntex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "0.12", features = ["runtime-async-std-native-tls", "sqlx-sqlite"] }
