[package]
name = "ntex-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "1.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
